<resources>
    <string name="app_name">My Package Deliver Manager</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_name">User Name</string>
    <string name="action_sign_in_short" />
    <string name="verify_password">Verify Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="back_to_login">Already have an account? login here</string>
    <string name="login">Login</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_id">ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="is_fragile">Is there fragile content?</string>
    <string name="recipient_phone">Recipient\'s phone number</string>
    <string name="title">Enter package details</string>
    <string name="butten_insert">Insert package to store</string>
    <string name="logout">Log out</string>
    <string name="hint_phone_number">Phone Number (this format 050*******)</string>
    <string name="hint_phone">Phone Number</string>
    <string name="get_pincode">Get Pincode</string>
</resources>